fix chrome scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,11 @@ code {
   overflow-y: scroll;
 }
 
+.stage-body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 .stage-parent {
   height: 100vh;
   width: 1000vh;
